--- a/drone_management/src/main/resources/application.properties
+++ b/drone_management/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8878
+spring.jpa.open-in-view=false
 
 ##### H2 Configurations
 spring.h2.console.enabled=true
@@ -7,5 +8,5 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.settings.web-allow-others=true
